--- a/C1 - Supervised Machine Learning - Regression and Classification/week1/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
+++ b/C1 - Supervised Machine Learning - Regression and Classification/week1/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
@@ -1,207 +1,246 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "# Optional Lab:  Brief Introduction to Python and Jupyter Notebooks\n",
-    "Welcome to the first optional lab! \n",
-    "Optional labs are available to:\n",
-    "- provide information - like this notebook\n",
-    "- reinforce lecture material with hands-on examples\n",
-    "- provide working examples of routines used in the graded labs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Goals\n",
-    "In this lab, you will:\n",
-    "- Get a brief introduction to Jupyter notebooks\n",
-    "- Take a tour of Jupyter notebooks\n",
-    "- Learn the difference between markdown cells and code cells\n",
-    "- Practice some basic python\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "The easiest way to become familiar with Jupyter notebooks is to take the tour available above in the Help menu:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "<figure>\n",
-    "    <center> <img src=\"./images/C1W1L1_Tour.PNG\"  alt='missing' width=\"400\"  ><center/>\n",
-    "<figure/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "Jupyter notebooks have two types of cells that are used in this course. Cells such as this which contain documentation called `Markdown Cells`. The name is derived from the simple formatting language used in the cells. You will not be required to produce markdown cells. Its useful to understand the `cell pulldown` shown in graphic below. Occasionally, a cell will end up in the wrong mode and you may need to restore it to the right state:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "<figure>\n",
-    "   <img src=\"./images/C1W1L1_Markdown.PNG\"  alt='missing' width=\"400\"  >\n",
-    "<figure/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "The other type of cell is the `code cell` where you will write your code:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is  code cell\n"
-     ]
-    }
-   ],
-   "source": [
-    "#This is  a 'Code' Cell\n",
-    "print(\"This is  code cell\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Python\n",
-    "You can write your code in the code cells. \n",
-    "To run the code, select the cell and either\n",
-    "- hold the shift-key down and hit 'enter' or 'return'\n",
-    "- click the 'run' arrow above\n",
-    "<figure>\n",
-    "    <img src=\"./images/C1W1L1_Run.PNG\"  width=\"400\"  >\n",
-    "<figure/>\n",
-    "\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "### Print statement\n",
-    "Print statements will generally use the python f-string style.  \n",
-    "Try creating your own print in the following cell.  \n",
-    "Try both methods of running the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "QMBTT6xqby88"
+      },
+      "source": [
+        "# Optional Lab:  Brief Introduction to Python and Jupyter Notebooks\n",
+        "Welcome to the first optional lab!\n",
+        "Optional labs are available to:\n",
+        "- provide information - like this notebook\n",
+        "- reinforce lecture material with hands-on examples\n",
+        "- provide working examples of routines used in the graded labs"
+      ],
+      "id": "QMBTT6xqby88"
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f strings allow you to embed variables right in the strings!\n"
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "lUhgc7-Mby8-"
+      },
+      "source": [
+        "## Goals\n",
+        "In this lab, you will:\n",
+        "- Get a brief introduction to Jupyter notebooks\n",
+        "- Take a tour of Jupyter notebooks\n",
+        "- Learn the difference between markdown cells and code cells\n",
+        "- Practice some basic python\n"
+      ],
+      "id": "lUhgc7-Mby8-"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "FivjlP6Zby8-"
+      },
+      "source": [
+        "The easiest way to become familiar with Jupyter notebooks is to take the tour available above in the Help menu:"
+      ],
+      "id": "FivjlP6Zby8-"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "4vIbnS_Gby8-"
+      },
+      "source": [
+        "<figure>\n",
+        "    <center> <img src=\"https://github.com/moky24/Machine-Learning-Specialization-Coursera/blob/main/C1%20-%20Supervised%20Machine%20Learning%20-%20Regression%20and%20Classification/week1/Optional%20Labs/images/C1W1L1_Tour.PNG?raw=1\"  alt='missing' width=\"400\"  ><center/>\n",
+        "<figure/>"
+      ],
+      "id": "4vIbnS_Gby8-"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "Q2yEm_7tby8-"
+      },
+      "source": [
+        "Jupyter notebooks have two types of cells that are used in this course. Cells such as this which contain documentation called `Markdown Cells`. The name is derived from the simple formatting language used in the cells. You will not be required to produce markdown cells. Its useful to understand the `cell pulldown` shown in graphic below. Occasionally, a cell will end up in the wrong mode and you may need to restore it to the right state:"
+      ],
+      "id": "Q2yEm_7tby8-"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "XjcLMPilby8_"
+      },
+      "source": [
+        "<figure>\n",
+        "   <img src=\"https://github.com/moky24/Machine-Learning-Specialization-Coursera/blob/main/C1%20-%20Supervised%20Machine%20Learning%20-%20Regression%20and%20Classification/week1/Optional%20Labs/images/C1W1L1_Markdown.PNG?raw=1\"  alt='missing' width=\"400\"  >\n",
+        "<figure/>"
+      ],
+      "id": "XjcLMPilby8_"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "Fzdmu7E2by8_"
+      },
+      "source": [
+        "The other type of cell is the `code cell` where you will write your code:"
+      ],
+      "id": "Fzdmu7E2by8_"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "pycharm": {
+          "name": "#%%\n"
+        },
+        "id": "uQ9mOc8Yby8_",
+        "outputId": "3a0dea52-45d5-4fbe-d241-77a292e88723"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "This is  code cell\n"
+          ]
+        }
+      ],
+      "source": [
+        "#This is  a 'Code' Cell\n",
+        "print(\"This is  code cell\")"
+      ],
+      "id": "uQ9mOc8Yby8_"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "pPbh4Vshby9A"
+      },
+      "source": [
+        "## Python\n",
+        "You can write your code in the code cells.\n",
+        "To run the code, select the cell and either\n",
+        "- hold the shift-key down and hit 'enter' or 'return'\n",
+        "- click the 'run' arrow above\n",
+        "<figure>\n",
+        "    <img src=\"https://github.com/moky24/Machine-Learning-Specialization-Coursera/blob/main/C1%20-%20Supervised%20Machine%20Learning%20-%20Regression%20and%20Classification/week1/Optional%20Labs/images/C1W1L1_Run.PNG?raw=1\"  width=\"400\"  >\n",
+        "<figure/>\n",
+        "\n",
+        ""
+      ],
+      "id": "pPbh4Vshby9A"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "1PYqt5QPby9A"
+      },
+      "source": [
+        "### Print statement\n",
+        "Print statements will generally use the python f-string style.  \n",
+        "Try creating your own print in the following cell.  \n",
+        "Try both methods of running the cell."
+      ],
+      "id": "1PYqt5QPby9A"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "pycharm": {
+          "name": "#%%\n"
+        },
+        "id": "5Mn5lnCXby9B",
+        "outputId": "81f98eec-a38f-40b3-bd0f-017268bd4191"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "f strings allow you to embed variables right in the strings!\n"
+          ]
+        }
+      ],
+      "source": [
+        "# print statements\n",
+        "variable = \"right in the strings!\"\n",
+        "print(f\"f strings allow you to embed variables {variable}\")"
+      ],
+      "id": "5Mn5lnCXby9B"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "pycharm": {
+          "name": "#%% md\n"
+        },
+        "id": "YeIA3DQDby9B"
+      },
+      "source": [
+        "# Congratulations!\n",
+        "You now know how to find your way around a Jupyter Notebook."
+      ],
+      "id": "YeIA3DQDby9B"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "test **24**"
+      ],
+      "metadata": {
+        "id": "9v3jIpJfcx9T"
+      },
+      "id": "9v3jIpJfcx9T"
     }
-   ],
-   "source": [
-    "# print statements\n",
-    "variable = \"right in the strings!\"\n",
-    "print(f\"f strings allow you to embed variables {variable}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.6"
+    },
+    "colab": {
+      "provenance": []
     }
-   },
-   "source": [
-    "# Congratulations!\n",
-    "You now know how to find your way around a Jupyter Notebook."
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
